--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "pm2 start app.js --watch",
     "restart": "pm2 stop app.js && pm2 start app.js --watch",
     "stop": "pm2 stop app.js",
-    "log": "pm2 logs"
+    "log": "pm2 logs",
+    "addcommand": "sh addcmd.sh"
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,8 @@
     "@discordjs/builders": "^0.6.0",
     "@discordjs/rest": "^0.1.0-canary.0",
     "discord.js": "^13.2.0",
-    "disnotify": "^1.2.7"
+    "disnotify": "^1.2.7",
+    "node-fetch": "^3.0.0",
+    "snekfetch": "^4.0.4"
   }
 }
